--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
 		"deque": "cpp",
 		"fstream": "cpp",
 		"iomanip": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"__tree": "cpp",
+		"map": "cpp"
 	}
 }
