--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,9 @@
 		"iomanip": "cpp",
 		"stack": "cpp",
 		"__tree": "cpp",
-		"map": "cpp"
+		"map": "cpp",
+		"numeric": "cpp",
+		"random": "cpp",
+		"unordered_set": "cpp"
 	}
 }
